--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,3 +1,9 @@
 canvas {
-    margin: 0px 0px 0px 0px
+    margin: 0px 0px 0px 0px;
+    width: 100vw;
+    height: 100vh;
+}
+
+body {
+    overflow: hidden;
 }
